--- a/build_node_compilers/pubspec.yaml
+++ b/build_node_compilers/pubspec.yaml
@@ -8,24 +8,24 @@ environment:
   sdk: '>=2.9.0 <3.0.0'
 
 dependencies:
-  analyzer: '>=0.36.4 <0.41.0'
-  bazel_worker: ^0.1.18
-  build: '>=1.3.0 <2.0.0'
-  build_config: '>=0.3.0 <0.5.0'
-  build_modules: ^2.11.3
-  collection: ^1.0.0
-  crypto: ^2.0.0
-  logging: ^0.11.3
-  meta: ^1.1.0
-  node_preamble: ^1.4.8
-  path: ^1.4.2
-  pool: ^1.3.6
-  scratch_space: ^0.0.2
+  analyzer: ^1.1.0
+  bazel_worker: ^0.1.25
+  collection: ^1.15.0
+  crypto: ^3.0.0
+  build_modules: ^3.0.5
+  meta: ^1.3.0
+  build: ^1.6.3
+  build_config: ^0.4.6
+  logging: ^1.0.0
+  node_preamble: ^1.4.13
+  path: ^1.8.0
+  pool: ^1.5.0
+  scratch_space: ^0.0.4+3
 
 dev_dependencies:
-  build_test: ^0.10.0
-  pedantic: ^1.0.0
-  test: ^1.0.0
+  pedantic: ^1.11.0
+  test: ^1.16.5
+  build_test: ^1.3.7
   a:
     path: test/fixtures/a
   b:
