--- a/node_http/pubspec.yaml
+++ b/node_http/pubspec.yaml
@@ -8,13 +8,13 @@ environment:
   sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
-  http: ^0.12.0
+  http: ^0.13.0
   node_interop: ^1.0.0
   node_io: ^1.0.0
 
 dev_dependencies:
-  build_runner: ">=1.10.0 <1.10.2"
-  build_node_compilers: ^0.3.0
+  build_runner: 1.11.5
+#  build_node_compilers: ^0.3.1
   build_test: ^1.0.0
   pedantic: ^1.0.0
   test: ^1.0.0
