--- a/node_interop/pubspec.yaml
+++ b/node_interop/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
   js: ^0.6.1
 
 dev_dependencies:
-  pedantic: ^1.0.0
-  test: ^1.0.0
-  build_runner: ">=1.10.0 <1.10.2"
-  build_node_compilers: ^0.3.0
-  build_test: ^1.0.0
+  pedantic: ^1.11.0
+  test: ^1.16.5
+  build_runner: 1.11.5
+  # build_node_compilers: ^0.3.1
+  build_test: ^1.3.7
