--- a/node_io/pubspec.yaml
+++ b/node_io/pubspec.yaml
@@ -8,14 +8,14 @@ environment:
   sdk: '>=2.2.0 <3.0.0'
 
 dependencies:
-  file: ^5.0.0
+  file: ^6.1.0
   node_interop: ^1.2.1
-  path: ^1.6.2
+  path: ^1.8.0
 
 dev_dependencies:
   js: ^0.6.0
-  pedantic: ^1.0.0
-  test: ^1.0.0
-  build_runner: ">=1.10.0 <1.10.2"
-  build_node_compilers: ^0.3.0
-  build_test: ^1.0.0
+  pedantic: ^1.11.0
+  test: ^1.16.5
+  build_runner: 1.11.5
+  # build_node_compilers: ^0.3.1
+  build_test: ^1.3.7
