--- a/node_http/pubspec.yaml
+++ b/node_http/pubspec.yaml
@@ -14,7 +14,10 @@ dependencies:
 
 dev_dependencies:
   build_runner: 1.11.5
-#  build_node_compilers: ^0.3.1
-  build_test: ^1.0.0
-  pedantic: ^1.0.0
-  test: ^1.0.0
+  build_node_compilers:
+    git:
+      url: git://github.com/Semapl3/node-interop
+      path: build_node_compilers
+  pedantic: ^1.11.0
+  test: ^1.16.5
+  build_test: ^1.3.7
