--- a/node_interop/pubspec.yaml
+++ b/node_interop/pubspec.yaml
@@ -8,11 +8,14 @@ environment:
   sdk: '>=2.9.0 <3.0.0'
 
 dependencies:
-  js: ^0.6.1
+  js: ^0.6.3
 
 dev_dependencies:
   pedantic: ^1.11.0
   test: ^1.16.5
   build_runner: 1.11.5
-  # build_node_compilers: ^0.3.1
+  build_node_compilers:
+    git:
+      url: git://github.com/Semapl3/node-interop
+      path: build_node_compilers
   build_test: ^1.3.7
