--- a/node_io/pubspec.yaml
+++ b/node_io/pubspec.yaml
@@ -17,5 +17,8 @@ dev_dependencies:
   pedantic: ^1.11.0
   test: ^1.16.5
   build_runner: 1.11.5
-  # build_node_compilers: ^0.3.1
+  build_node_compilers:
+    git:
+      url: git://github.com/Semapl3/node-interop
+      path: build_node_compilers
   build_test: ^1.3.7
