--- a/node_http/pubspec.yaml
+++ b/node_http/pubspec.yaml
@@ -3,14 +3,21 @@ description: HTTP client powered by Node.js I/O system.
 version: 1.0.1
 homepage: https://github.com/pulyaevskiy/node-interop
 author: Anatoly Pulyaevskiy <anatoly.pulyaevskiy@gmail.com>
+publish_to: none
 
 environment:
   sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
   http: ^0.13.0
-  node_interop: ^1.0.0
-  node_io: ^1.0.0
+  node_interop:
+    git:
+      url: git://github.com/Semapl3/node-interop
+      path: node_interop
+  node_io:
+    git:
+      url: git://github.com/Semapl3/node-interop
+      path: node_io
 
 dev_dependencies:
   build_runner: 1.11.5
