--- a/node_io/pubspec.yaml
+++ b/node_io/pubspec.yaml
@@ -3,17 +3,21 @@ description: Like dart:io but with Node.js.
 version: 1.2.0
 homepage: https://github.com/pulyaevskiy/node-interop
 author: Anatoly Pulyaevskiy <anatoly.pulyaevskiy@gmail.com>
+publish_to: none
 
 environment:
   sdk: '>=2.2.0 <3.0.0'
 
 dependencies:
   file: ^6.1.0
-  node_interop: ^1.2.1
+  node_interop:
+    git:
+      url: git://github.com/Semapl3/node-interop
+      path: node_interop
   path: ^1.8.0
 
 dev_dependencies:
-  js: ^0.6.0
+  js: ^0.6.3
   pedantic: ^1.11.0
   test: ^1.16.5
   build_runner: 1.11.5
