--- a/build_node_compilers/pubspec.yaml
+++ b/build_node_compilers/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 
 dependencies:
   analyzer: ^1.1.0
-  bazel_worker: ^0.1.25
+  bazel_worker: ^1.0.0-nullsafety.0
   collection: ^1.15.0
   crypto: ^3.0.0
   build_modules: ^3.0.5
