--- a/build_node_compilers/pubspec.yaml
+++ b/build_node_compilers/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/pulyaevskiy/node-interop
 author: Anatoly Pulyaevskiy <anatoly.pulyaevskiy@gmail.com>
 
 environment:
-  sdk: '>=2.9.0 <3.0.0'
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   analyzer: ^1.1.0
