--- a/node_io/pubspec.yaml
+++ b/node_io/pubspec.yaml
@@ -6,14 +6,12 @@ author: Anatoly Pulyaevskiy <anatoly.pulyaevskiy@gmail.com>
 publish_to: none
 
 environment:
-  sdk: '>=2.2.0 <3.0.0'
+  sdk: '>=2.9.0 <3.0.0'
 
 dependencies:
   file: ^6.1.0
   node_interop:
-    git:
-      url: git://github.com/Semapl3/node-interop
-      path: node_interop
+    path: ../node_interop
   path: ^1.8.0
 
 dev_dependencies:
@@ -22,7 +20,5 @@ dev_dependencies:
   test: ^1.16.5
   build_runner: 1.11.5
   build_node_compilers:
-    git:
-      url: git://github.com/Semapl3/node-interop
-      path: build_node_compilers
+    path: ../build_node_compilers
   build_test: ^1.3.7
