--- a/node_http/pubspec.yaml
+++ b/node_http/pubspec.yaml
@@ -11,14 +11,20 @@ environment:
 dependencies:
   http: ^0.13.0
   node_interop:
-    path: ../node_interop
+    git:
+      url: git://github.com/Semapl3/firebase-functions-interop
+      path: node_interop
   node_io:
-    path: ../node_io
+    git:
+      url: git://github.com/Semapl3/firebase-functions-interop
+      path: node_io
 
 dev_dependencies:
   build_runner: 1.11.5
   build_node_compilers:
-    path: ../build_node_compilers
+    git:
+      url: git://github.com/Semapl3/firebase-functions-interop
+      path: build_node_compilers
   pedantic: ^1.11.0
   test: ^1.16.5
   build_test: ^1.3.7
