--- a/node_io/pubspec.yaml
+++ b/node_io/pubspec.yaml
@@ -11,7 +11,9 @@ environment:
 dependencies:
   file: ^6.1.0
   node_interop:
-    path: ../node_interop
+    git:
+      url: git://github.com/Semapl3/firebase-functions-interop
+      path: node_interop
   path: ^1.8.0
 
 dev_dependencies:
@@ -20,5 +22,7 @@ dev_dependencies:
   test: ^1.16.5
   build_runner: 1.11.5
   build_node_compilers:
-    path: ../build_node_compilers
+    git:
+      url: git://github.com/Semapl3/firebase-functions-interop
+      path: build_node_compilers
   build_test: ^1.3.7
