--- a/build_node_compilers/pubspec.yaml
+++ b/build_node_compilers/pubspec.yaml
@@ -8,24 +8,24 @@ environment:
   sdk: ">=2.9.0 <3.0.0"
 
 dependencies:
-  analyzer: ^1.1.0
-  bazel_worker: ^1.0.0-nullsafety.0
-  collection: ^1.15.0
-  crypto: ^3.0.0
-  build_modules: ^3.0.5
-  meta: ^1.3.0
-  build: ^1.6.3
-  build_config: ^0.4.6
-  logging: ^1.0.0
+  analyzer: ^0.41.2
+  bazel_worker: ^0.1.25
+  collection: ^1.14.13
+  crypto: ^2.1.5
+  build_modules: ^3.0.2
+  meta: 1.2.3
+  build: ^1.6.0
+  build_config: ^0.4.5
+  logging: ^0.11.4
   node_preamble: ^1.4.13
-  path: ^1.8.0
-  pool: ^1.5.0
+  path: ^1.7.0
+  pool: ^1.4.0
   scratch_space: ^0.0.4+3
 
 dev_dependencies:
   pedantic: ^1.11.0
-  test: ^1.16.5
-  build_test: ^1.3.7
+  test: ^1.15.7
+  build_test: ^1.3.6
   a:
     path: test/fixtures/a
   b:
