--- a/build_node_compilers/pubspec.yaml
+++ b/build_node_compilers/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   build_config: ^0.4.5
   logging: ^0.11.4
   node_preamble: ^1.4.13
-  path: ^1.5.0
+  path: 1.6.4
   pool: ^1.4.0
   scratch_space: ^0.0.4+3
 
