--- a/node_io/pubspec.yaml
+++ b/node_io/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     git:
       url: git://github.com/Semapl3/node-interop
       path: node_interop
-  path: ^1.5.0
+  path: 1.6.4
 
 dev_dependencies:
   js: ^0.6.2
