--- a/build_node_compilers/pubspec.yaml
+++ b/build_node_compilers/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   scratch_space: ^0.0.4+3
 
 dev_dependencies:
-  pedantic: ^1.11.0
+  pedantic: 1.9.2
   test: ^1.15.7
   build_test: ^1.3.6
   a:
