--- a/node_http/pubspec.yaml
+++ b/node_http/pubspec.yaml
@@ -25,6 +25,6 @@ dev_dependencies:
     git:
       url: git://github.com/Semapl3/node-interop
       path: build_node_compilers
-  pedantic: ^1.11.0
+  pedantic: 1.9.2
   test: ^1.15.7
   build_test: ^1.3.6
