--- a/node_interop/pubspec.yaml
+++ b/node_interop/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   js: ^0.6.2
 
 dev_dependencies:
-  pedantic: ^1.11.0
+  pedantic: 1.9.2
   test: ^1.15.7
   build_test: ^1.3.6
   build_runner: 1.11.1
