--- a/node_io/pubspec.yaml
+++ b/node_io/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
 
 dev_dependencies:
   js: ^0.6.2
-  pedantic: ^1.11.0
+  pedantic: 1.9.2
   build_runner: 1.11.1
   test: ^1.15.7
   build_test: ^1.3.6
